# Quantum-Computing-Simulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CNOTGate.cpp  CNOTGate.h  Circuit.cpp  Circuit.h  Gate.cpp  Gate.h  GateFactory.cpp  GateFactory.h  HadamardGate.cpp  HadamardGate.h  PauliXGate.cpp  PauliXGate.h  QubitRegister.cpp  QubitRegister.h  main.cpp
